BLE Battery Service WIP3

--- a/demos/nrf52832-midi/.vscode/tasks.json
+++ b/demos/nrf52832-midi/.vscode/tasks.json
@@ -5,11 +5,13 @@
     "tasks": [
         {
             "type": "cargo",
-            "subcommand": "check",
+            "subcommand": "build",
             "problemMatcher": [
                 "$rustc"
             ],
-            "group": "build"
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
         }
     ]
-}
