--- a/demos/nrf52832-midi/.vscode/tasks.json
+++ b/demos/nrf52832-midi/.vscode/tasks.json
@@ -4,8 +4,9 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "type": "cargo",
-            "subcommand": "build",
+            "type": "shell",
+            "label": "cargo build",
+            "command": "cargo build",
             "problemMatcher": [
                 "$rustc"
             ],
@@ -13,6 +14,6 @@
                 "kind": "build",
                 "isDefault": true
             }
-        }
+        },
     ]
 }
